--- a/MainPage.html
+++ b/MainPage.html
@@ -4,28 +4,162 @@
     <meta charset="utf-8">
     <title>Abdullahs Portfolio Webpage</title>
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
   </head>
 
   <body>
-    <nav class="navbar navbar-dark bg-inverse">
-      <a class="navbar-brand">Abdullahs Portfolio</a>
-        <ul class="nav navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Me</a>
-          </li>
-        </ul>
-    </nav>
+      <nav class="navbar-static-top navbar-inverse">
+        <div class="container">
+        <a class="navbar-brand">Abdullahs Portfolio</a>
+        <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+          Menu
+        </button>
+        <div class="collapse navbar-collapse navHeaderCollapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li >
+              <a href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li >
+              <a href="#aboutMe">About Me</a>
+            </li>
+            <li >
+              <a href="#Projects">Projects</a>
+            </li>
+            <li >
+              <a href="#contactMe">Contact Me</a>
+            </li>
+          </ul>
+          </div>
+        </div>
+      </nav>
+
+      <div class="jumbotron">
+          <div class="container">
+            <h1>Welcome to my Website</h1>
+            <p>This is our demo site, I hope you like it!</p>
+            <p>All code can be found on my GitHub account, and is free to use, modify and sell!</p>
+
+  </div>
+</div>
+
+<div class="alt1 padding" id="about">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<h2 class="text-center">Past work</h2>
+				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+				<a href="#one" class="btn btn-default">Tell me more..</a>
+			</div>
+			<div class="col-md-4">
+				<h2 class="text-center">Past work</h2>
+				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+				<a href="#two" class="btn btn-default">Tell me more..</a>
+			</div>
+			<div class="col-md-4">
+				<h2 class="text-center">Past work</h2>
+				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+				<a href="#three" class="btn btn-default">Tell me more..</a>
+			</div>
+
+		</div>
+	</div>
+	</div>
+
+
+	<div class="container" id="portfolio">
+		<div class="row padding" id="one">
+			<div class="col-md-6">
+				<img src="1.png" class="img-circle img-responsive" alt="Circular holding image"/>
+			</div>
+			<div class="col-md-6">
+				<h2 class="text-center">Work 1</h2>
+				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+
+			</div>
+		</div>
+		<hr />
+
+		<div class="row padding" id="two">
+			<div class="col-md-6">
+				<h2 class="text-center">Work 2</h2>
+				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+
+			</div>
+			<div class="col-md-6">
+				<img src="2.png" class="img-circle img-responsive" alt="Circular holding image"/>
+			</div>
+		</div>
+		<hr />
+		<div class="row padding" id="three">
+			<div class="col-md-6">
+				<img src="3.png" class="img-circle img-responsive" alt="Circular holding image"/>
+			</div>
+			<div class="col-md-6">
+				<h2 class="text-center">Work 3</h2>
+				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+			</div>
+		</div>
+		<hr />
+	</div>
+
+	<div class="container padding" id="contact">
+		<form role="form">
+			<div class="form-group">
+				<label for="email">Email:</label>
+				<input type="email" class="form-control" id="email" name="email" placeholder="example@example.com"/>
+			</div>
+			<div class="form-group">
+				<label for="name">Name:</label>
+				<input type="text" class="form-control" id="name" name="name" placeholder="Your name here"/>
+
+			</div>
+			<div class="form-group">
+				<label for="message">Message:</label>
+				<textarea class="form-control" name="message" id="message" placeholder="Your message here"></textarea>
+			</div>
+			<div class="form-group">
+				<input type="checkbox" /> Send me promotional content
+			</div>
+			<button type="submit" class="btn btn-default">Submit</button>
+		</form>
+	</div>
+
+	<div class="alt2">
+		<div class="container">
+			<footer>
+				&copy; Sam Cogan <br />
+				<a href="#home">Back to top</a>
+			</footer>
+		</div>
+	</div>
+
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script>
+	$(function() {
+  $('a[href*=#]:not([href=#])').click(function() {
+    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+      var target = $(this.hash);
+      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+      if (target.length) {
+        $('html,body').animate({
+          scrollTop: target.offset().top
+        }, 1000);
+        return false;
+      }
+    }
+  });
+});
+	</script>
   </body>
 </html>
