--- a/MainPage.html
+++ b/MainPage.html
@@ -13,7 +13,10 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="jquery.easing.1.3.js"></script>
+    <script src="scrolling.js"></script>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/scrolling.css">
 </head>
 
 <body>
@@ -26,16 +29,16 @@
             <div class="collapse navbar-collapse navHeaderCollapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="page-scroll" href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#AboutMe">About Me</a>
+                        <a class="page-scroll" href="#AboutMe">About Me</a>
                     </li>
                     <li>
-                        <a href="#Projects">Projects</a>
+                        <a class="page-scroll" href="#Projects">Projects</a>
                     </li>
                     <li>
-                        <a href="#ContactMe">Contact Me</a>
+                        <a class="page-scroll" href="#ContactMe">Contact Me</a>
                     </li>
                 </ul>
             </div>
