--- a/MainPage.html
+++ b/MainPage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Abdullahs Portfolio Webpage</title>
     <!-- Latest compiled and minified CSS -->
@@ -11,155 +12,60 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-  </head>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/main.css">
+</head>
 
-  <body>
-      <nav class="navbar-static-top navbar-inverse">
+<body>
+    <nav class="navbar-fixed-top navbar-inverse" id="mainnav">
         <div class="container">
-        <a class="navbar-brand">Abdullahs Portfolio</a>
-        <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+            <a class="navbar-brand">Abdullahs Portfolio</a>
+            <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
           Menu
         </button>
-        <div class="collapse navbar-collapse navHeaderCollapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li >
-              <a href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li >
-              <a href="#aboutMe">About Me</a>
-            </li>
-            <li >
-              <a href="#Projects">Projects</a>
-            </li>
-            <li >
-              <a href="#contactMe">Contact Me</a>
-            </li>
-          </ul>
-          </div>
+            <div class="collapse navbar-collapse navHeaderCollapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li>
+                        <a href="#AboutMe">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#Projects">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#ContactMe">Contact Me</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
 
-      <div class="jumbotron">
-          <div class="container">
-            <h1>Welcome to my Website</h1>
-            <p>This is our demo site, I hope you like it!</p>
-            <p>All code can be found on my GitHub account, and is free to use, modify and sell!</p>
-
+<div class="jumbotron">
+  <div class="container">
+    <h1>Dream Big</h1>
+    <p>We all have the power to bring great change to the world and mine is with web development</p>
   </div>
 </div>
+<div class="jumbotron" id="AboutMe">
+  <div class="container">
+    <h1>About Me</h1>
+    <p>We all have the power to bring great change to the world and mine is with web development</p>
+  </div>
+</div>
+<div class="jumbotron" id="Projects">
+  <div class="container">
+    <h1>Projects</h1>
+    <p>We all have the power to bring great change to the world and mine is with web development</p>
+  </div>
+</div>
+<div class="jumbotron" id="ContactMe">
+  <div class="container">
+    <h1>Contact Me</h1>
+    <p>We all have the power to bring great change to the world and mine is with web development</p>
+  </div>
+</div>
+</body>
 
-<div class="alt1 padding" id="about">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4">
-				<h2 class="text-center">Past work</h2>
-				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-				<a href="#one" class="btn btn-default">Tell me more..</a>
-			</div>
-			<div class="col-md-4">
-				<h2 class="text-center">Past work</h2>
-				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-				<a href="#two" class="btn btn-default">Tell me more..</a>
-			</div>
-			<div class="col-md-4">
-				<h2 class="text-center">Past work</h2>
-				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-				<a href="#three" class="btn btn-default">Tell me more..</a>
-			</div>
-
-		</div>
-	</div>
-	</div>
-
-
-	<div class="container" id="portfolio">
-		<div class="row padding" id="one">
-			<div class="col-md-6">
-				<img src="1.png" class="img-circle img-responsive" alt="Circular holding image"/>
-			</div>
-			<div class="col-md-6">
-				<h2 class="text-center">Work 1</h2>
-				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-
-			</div>
-		</div>
-		<hr />
-
-		<div class="row padding" id="two">
-			<div class="col-md-6">
-				<h2 class="text-center">Work 2</h2>
-				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-
-			</div>
-			<div class="col-md-6">
-				<img src="2.png" class="img-circle img-responsive" alt="Circular holding image"/>
-			</div>
-		</div>
-		<hr />
-		<div class="row padding" id="three">
-			<div class="col-md-6">
-				<img src="3.png" class="img-circle img-responsive" alt="Circular holding image"/>
-			</div>
-			<div class="col-md-6">
-				<h2 class="text-center">Work 3</h2>
-				<p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-			</div>
-		</div>
-		<hr />
-	</div>
-
-	<div class="container padding" id="contact">
-		<form role="form">
-			<div class="form-group">
-				<label for="email">Email:</label>
-				<input type="email" class="form-control" id="email" name="email" placeholder="example@example.com"/>
-			</div>
-			<div class="form-group">
-				<label for="name">Name:</label>
-				<input type="text" class="form-control" id="name" name="name" placeholder="Your name here"/>
-
-			</div>
-			<div class="form-group">
-				<label for="message">Message:</label>
-				<textarea class="form-control" name="message" id="message" placeholder="Your message here"></textarea>
-			</div>
-			<div class="form-group">
-				<input type="checkbox" /> Send me promotional content
-			</div>
-			<button type="submit" class="btn btn-default">Submit</button>
-		</form>
-	</div>
-
-	<div class="alt2">
-		<div class="container">
-			<footer>
-				&copy; Sam Cogan <br />
-				<a href="#home">Back to top</a>
-			</footer>
-		</div>
-	</div>
-
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script>
-	$(function() {
-  $('a[href*=#]:not([href=#])').click(function() {
-    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-      var target = $(this.hash);
-      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-      if (target.length) {
-        $('html,body').animate({
-          scrollTop: target.offset().top
-        }, 1000);
-        return false;
-      }
-    }
-  });
-});
-	</script>
-  </body>
 </html>
