Changed navbar design

--- a/MainPage.html
+++ b/MainPage.html
@@ -20,16 +20,15 @@
 </head>
 
 <body>
-    <nav class="navbar-fixed-top navbar-inverse" id="mainnav">
+    <nav class="navbar navbar-fixed-top navbar-default navbar-fnt" id="mainnav">
         <div class="container">
-            <a class="navbar-brand">Abdullahs Portfolio</a>
             <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
           Menu
         </button>
             <div class="collapse navbar-collapse navHeaderCollapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#">Home</a>
+                        <a class="page-scroll" href="#Home">Home</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#AboutMe">About Me</a>
@@ -45,30 +44,63 @@
         </div>
     </nav>
 
-<div class="jumbotron">
-  <div class="container">
-    <h1>Dream Big</h1>
-    <p>We all have the power to bring great change to the world and mine is with web development</p>
-  </div>
-</div>
-<div class="jumbotron" id="AboutMe">
-  <div class="container">
-    <h1>About Me</h1>
-    <p>We all have the power to bring great change to the world and mine is with web development</p>
-  </div>
-</div>
-<div class="jumbotron" id="Projects">
-  <div class="container">
-    <h1>Projects</h1>
-    <p>We all have the power to bring great change to the world and mine is with web development</p>
-  </div>
-</div>
-<div class="jumbotron" id="ContactMe">
-  <div class="container">
-    <h1>Contact Me</h1>
-    <p>We all have the power to bring great change to the world and mine is with web development</p>
-  </div>
-</div>
+    <div class="jumbotron" id="Home">
+        <div class="container">
+            <h1>Dream Big</h1>
+            <p>We all have the power to bring great change to the world so lets make it happen</p>
+            <img src="images/classy.jpg" class="img-circle" alt="formalPicture">
+            <div class="row">
+            </div>
+        </div>
+    </div>
+    <div class="jumbotron" id="AboutMe">
+        <div class="container">
+            <h1 style="text-align:center;">About Me</h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6" style="padding-left:3em;">
+                        <p>Hi there, My name is Muhammad Abdullah.I am currently enrolled in the Bacholers of Computer Information Systems program at Mount Royal University</p>
+                    </div>
+                    <div class="col-md-6">
+                      <img src="images/closeup.jpg" class="img-circle img-responsive" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="jumbotron" id="Projects">
+        <div class="container">
+            <h1>Projects</h1>
+            <p>Please follow one of the links below to access the description on the types of projects i have worked on</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <p><a href="java.html" target="_blank" class="btn btn-default btn-lg" >Java</a></p>
+                </div>
+                <div class="col-md-4">
+                    <p><a href="websites.html" target="_blank" class="btn btn-default btn-lg">Websites</a></p>
+                </div>
+                <div class="col-md-4"
+                    <p><a href="mapps.html" target="_blank" class="btn btn-default btn-lg">Mobile Apps</a></p>
+                </div>
+                <div class="col-md-4">
+                    <p><a href="games.html" target="_blank" class="btn btn-default btn-lg">Games</a></p>
+                </div>
+                <div class="col-md-4">
+                    <p><a href="other.html" target="_blank" class="btn btn-default btn-lg">Other</a></p>
+                </div>
+            <div class="col-md-4">
+                <p><a href="learning.html" target="_blank" class="btn btn-default btn-lg">Learning</a></p>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    <div class="jumbotron" id="ContactMe">
+        <div class="container">
+            <h1>Contact Me</h1>
+            <p>We all have the power to bring great change to the world and mine is with web development</p>
+        </div>
+    </div>
 </body>
 
 </html>
