--- a/MainPage.html
+++ b/MainPage.html
@@ -62,7 +62,7 @@
                         <p>Hi there, My name is Muhammad Abdullah.I am currently enrolled in the Bacholers of Computer Information Systems program at Mount Royal University</p>
                     </div>
                     <div class="col-md-6">
-                      <img src="images/closeup.jpg" class="img-circle img-responsive" alt="">
+                        <img src="images/closeup.jpg" class="img-circle img-responsive" alt="">
                     </div>
                 </div>
             </div>
@@ -74,13 +74,12 @@
             <p>Please follow one of the links below to access the description on the types of projects i have worked on</p>
             <div class="row">
                 <div class="col-md-4">
-                    <p><a href="java.html" target="_blank" class="btn btn-default btn-lg" >Java</a></p>
+                    <p><a href="java.html" target="_blank" class="btn btn-default btn-lg">Java</a></p>
                 </div>
                 <div class="col-md-4">
                     <p><a href="websites.html" target="_blank" class="btn btn-default btn-lg">Websites</a></p>
                 </div>
-                <div class="col-md-4"
-                    <p><a href="mapps.html" target="_blank" class="btn btn-default btn-lg">Mobile Apps</a></p>
+                <div class="col-md-4" <p><a href="mapps.html" target="_blank" class="btn btn-default btn-lg">Mobile Apps</a></p>
                 </div>
                 <div class="col-md-4">
                     <p><a href="games.html" target="_blank" class="btn btn-default btn-lg">Games</a></p>
@@ -88,17 +87,30 @@
                 <div class="col-md-4">
                     <p><a href="other.html" target="_blank" class="btn btn-default btn-lg">Other</a></p>
                 </div>
-            <div class="col-md-4">
-                <p><a href="learning.html" target="_blank" class="btn btn-default btn-lg">Learning</a></p>
+                <div class="col-md-4">
+                    <p><a href="learning.html" target="_blank" class="btn btn-default btn-lg">Learning</a></p>
+                </div>
             </div>
         </div>
-    </div>
     </div>
     </div>
     <div class="jumbotron" id="ContactMe">
         <div class="container">
             <h1>Contact Me</h1>
-            <p>We all have the power to bring great change to the world and mine is with web development</p>
+            <form role="form">
+              <div class="form-group">
+                  <label for="name">Name</label>
+                  <input type="text" value="form-control" id="name" name="name" placeholder="First Name Last Name"/>
+              </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" value="form-control" id="email" name="email" placeholder="yourname@youremailprovider.com"/>
+                </div>
+                <div class="form-group">
+                    <label for="message">Content:</label>
+                    <textarea name="message" id="message" class="form-control" placeholder="Your email content here"></textarea>
+                </div>
+            </form>
         </div>
     </div>
 </body>
