--- a/MainPage.html
+++ b/MainPage.html
@@ -13,14 +13,14 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="jquery.easing.1.3.js"></script>
-    <script src="scrolling.js"></script>
+    <script src="jS/jquery.easing.1.3.js"></script>
+    <script src="jS/scrolling.js"></script>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="/css/scrolling.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-fixed-top navbar-default navbar-fnt" id="mainnav">
+    <nav class="navbar navbar-transparent navbar-fixed-top navbar-default " >
         <div class="container">
             <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
           Menu
@@ -50,8 +50,9 @@
             <p>We all have the power to bring great change to the world so lets make it happen</p>
             <img src="images/classy.jpg" class="img-circle" alt="formalPicture">
             <div class="row">
+                <p>Hi there, My name is Muhammad Abdullah, I am currently enrolled in my third year of Bacholers of Computer Information Systems at Mount Royal University</p>
             </div>
-        </div>
+    </div>
     </div>
     <div class="jumbotron" id="AboutMe">
         <div class="container">
@@ -72,47 +73,39 @@
         <div class="container">
             <h1>Projects</h1>
             <p>Please follow one of the links below to access the description on the types of projects i have worked on</p>
-            <div class="row">
-                <div class="col-md-4">
-                    <p><a href="java.html" target="_blank" class="btn btn-default btn-lg">Java</a></p>
-                </div>
-                <div class="col-md-4">
-                    <p><a href="websites.html" target="_blank" class="btn btn-default btn-lg">Websites</a></p>
-                </div>
-                <div class="col-md-4" <p><a href="mapps.html" target="_blank" class="btn btn-default btn-lg">Mobile Apps</a></p>
-                </div>
-                <div class="col-md-4">
-                    <p><a href="games.html" target="_blank" class="btn btn-default btn-lg">Games</a></p>
-                </div>
-                <div class="col-md-4">
-                    <p><a href="other.html" target="_blank" class="btn btn-default btn-lg">Other</a></p>
-                </div>
-                <div class="col-md-4">
-                    <p><a href="learning.html" target="_blank" class="btn btn-default btn-lg">Learning</a></p>
-                </div>
-            </div>
+            <a href="https://github.com/MuhammadAbdullah1"><img src="https://jitpack.io/w/img/github-logo.png" alt="Github Logo"></a>
         </div>
-    </div>
     </div>
     <div class="jumbotron" id="ContactMe">
         <div class="container">
             <h1>Contact Me</h1>
-            <form role="form">
-              <div class="form-group">
-                  <label for="name">Name</label>
-                  <input type="text" value="form-control" id="name" name="name" placeholder="First Name Last Name"/>
-              </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" value="form-control" id="email" name="email" placeholder="yourname@youremailprovider.com"/>
+            <div class="row">
+                <div class="col-md-6">
+                    <form role="form">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" value="form-control" id="name" name="name" placeholder="First Name Last Name" />
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="email" value="form-control" id="email" name="email" placeholder="yourname@youremailprovider.com" />
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Content:</label>
+                            <textarea name="message" id="message" class="form-control" placeholder="Your email content here"></textarea>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label for="message">Content:</label>
-                    <textarea name="message" id="message" class="form-control" placeholder="Your email content here"></textarea>
+                <div class="col-md-6">
+                    <p>Or get in contact with me through</p>
+                    <a href="https://github.com/MuhammadAbdullah1"><img src="images/Logo-White-101px-R.png" alt="Github Logo"></a>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 </body>
+<footer>
+
+</footer>
 
 </html>
