Added paragraph to about me

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <p>I am currently enrolled in the Bacholers of Computer Information Systems program at Mount Royal University</p>
-                        <p>I am currently enrolled in the Bacholers of Computer Information Systems program at Mount Royal University</p>
+                        <p>Over the past 2 years attending my program,I have become more fluent in using Java,HTML,CSS,and Javascript. I currently working on becoming more fluent in using jQuery and plan to continue learning new languages in order to further my software developemnt career. </p>
                     </div>
                     <div class="col-md-4">
                         <img src="https://gun.io/static/uploads/Front%2Bboot1.png" class="img-responsive" style="width:400px;" alt="">
